--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script defer src="face-api.min.js"></script>
     <script defer src="script.js"></script>
     <style>
-        body{
+        body {
             margin: 0;
             padding: 0;
             width: 100vw;
@@ -14,12 +16,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            }
+        }
+
+        canvas {
+            position: absolute;
+        }
     </style>
 </head>
-<body>
-    <video id="video" width="720" height="560" autoplay muted>
 
-    </video>
+<body>
+    <video id="video" width="720" height="560" autoplay muted></video>
 </body>
+
 </html>
